# terminal_demo

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.github/workflows/: deploy.yml
crates/terminal_demo/: Cargo.toml
crates/terminal_demo/assets/: chart_data.json
crates/terminal_demo/src/: bottom_bar.rs  lib.rs  panels.rs  persistence.rs  top_bar.rs  workspace.rs
crates/terminal_demo/src/economic_calendar/: data.rs  mod.rs
scripts/: build-wasm.sh  fetch_chart_data.py  scrape_econ_calendar.py
www/: index.html  package.json  vite.config.js
www/src/: main.js
