[package]
name = "terminal_demo"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "terminal_demo"
path = "src/bin/native.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dirs = "5"
env_logger = "0.11"
